Work on the report and scenario 2

--- a/report/main.tex
+++ b/report/main.tex
@@ -1,11 +1,13 @@
 % Document configuration 
 
 \documentclass{beamer}
+
 \usepackage[utf8]{inputenc}
 \usetheme{Madrid}
 
+%--------------------------
 
-% Title page
+% Title page setup
 
 \title[Plataforma Digital]
 {Logística Urbana para Entrega de Mercadorias}
@@ -13,7 +15,7 @@
 \subtitle{Plataforma Digital}
 
 \author[Grupo 30, 2LEIC03]
-{Pedro Ramalho, Guilherme Sequeira, Tomás Pinto}
+{Guilherme Sequeira, Pedro Ramalho, Tomás Pacheco}
 
 \institute[FEUP]
 {
@@ -24,25 +26,28 @@
 \date[2021/2022 2S]
 {Desenho de Algoritmos, 2021/2022, 2º semestre}
 
-% ---------------------------------------------------
+%--------------------------
 
-
-% Section break
+% Display the table of contents at the beginning of each section
 
 \AtBeginSection[]
 {
   \begin{frame}
-    \frametitle[Conteúdos]
+    \frametitle{Conteúdos}
     \tableofcontents[currentsection]
   \end{frame}
 }
 
-% ---------------------------------------------------
+%--------------------------
+
+%----------------------------------------------
+
+% START DOCUMENT
 
 \begin{document}
 
 
-% Create title page
+% Initialize title page
 
 \frame{\titlepage}
 
@@ -50,17 +55,142 @@
 % Initialize table of contents
 
 \begin{frame}
-\frametitle{Conteúdos}
-\tableofcontents
+  \frametitle{Conteúdos}
+  \tableofcontents
 \end{frame}
 
 
+
+
+%-------------------------------------------------------
+
+% Begin section : Descrição do problema
+
 \section{Descrição do problema}
 
+%-------------------------------------------------------
+
+% frame 1
+\begin{frame}
+  \frametitle{Sample frame title}
+    Descrição do problema goes here.  
+\end{frame}
+
+% End section : Descrição do problema
+
+%-------------------------------------------------------
 
 
+
+
+%-------------------------------------------------------
+
+% Begin section : Cenário 1 - Minimização de Estafetas
+
+\section{Cenário 1 - Minimização de Estafetas}
+
+% frame 1
+\begin{frame}
+  \frametitle{Formalização do Problema}
+  Super important text.
+\end{frame}
+
+% frame 2
+\begin{frame}
+  \frametitle{Descrição dos Algoritmos}
+  Super important text.
+\end{frame}
+
+% frame 3
+
+\begin{frame}
+  \frametitle{Análise da Complexidade}
+  Super important text.
+\end{frame}
+
+% frame 4
+\begin{frame}
+  \frametitle{Resultados da Avaliação Empírica}
+  Super important text.
+\end{frame}
+
+% End section : Cenário 1 - Minimização de Estafetas
+
+%-------------------------------------------------------
+
+
+
+
+%-------------------------------------------------------
+
+% Begin section : Cenário 2 - Maximização dos Lucros
+
+\section{Cenário 2 - Maximização dos Lucros}
+
+% frame 1
+\begin{frame}
+  \frametitle{Formalização do Problema}
+  Super important text.
+\end{frame}
+
+% frame 2
+\begin{frame}
+  \frametitle{Descrição dos Algoritmos}
+  Super important text.
+\end{frame}
+
+% frame 3
+\begin{frame}
+  \frametitle{Análise da Complexidade}
+  Super important text.
+\end{frame}
+
+% frame 4
+\begin{frame}
+  \frametitle{Resultados da Avaliação Empírica}
+  Super important text.
+\end{frame}
+
+% End section : Cenário 2 - Maximização dos Lucros
+
+%-------------------------------------------------------
+
+
+
+
+%-------------------------------------------------------
+
+% Begin section : Cenário 3 - Minimização do Tempo de Entrega
+
+\section{Cenário 3 - Minimização do Tempo de Entrega}
+
+% frame 1
+\begin{frame}
+  \frametitle{Formalização do Problema}
+  Super important text.
+\end{frame}
+
+% frame 2
+\begin{frame}
+  \frametitle{Descrição dos Algoritmos}
+  Super important text.
+\end{frame}
+
+% frame 3
+\begin{frame}
+  \frametitle{Análise da Complexidade}
+  Super important text.
+\end{frame}
+
+% frame 4
+\begin{frame}
+  \frametitle{Resultados da Avaliação Empírica}
+  Super important text.
+\end{frame}
+
+% End section : Cenário 3 - Minimização do Tempo de Entrega
+
+%-------------------------------------------------------
 
 
 \end{document}
-
-
